# furss

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  docker.yml  test.yml
src/: lib.rs  main.rs  parse.rs  routes.rs
