[package]
name = "furss"
version = "0.0.1"
edition = "2021"

[dependencies]
argh = "0.1.12"
axum = { version = "0.7.7", optional = true }
dotenvy = { version = "0.15.7", optional = true }
futures = "0.3.31"
quick-xml = "0.37.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
tl = "0.7.8"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

[features]
default = ["proxy"]
proxy = ["dep:axum","dep:dotenvy", "dep:tracing", "dep:tracing-subscriber"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = 2 }
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 0 }
